# locomotor_learning_model

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
baseline Learning Model Code/: fObjective_AsymmetricNominal_8DTo10D.m  loadProtocolParameters.m  loadSensoryNoiseParameters.m  makeTreadmillSpeed_Tied.m  readme.txt  rootSimulateLearningWhileWalking.m
matlab/: run_simulation.m
matlab/src/: fObjective_AsymmetricNominal.m  postProcessHelper_JustThePlots.m  simulateLearningStepByStep.m  singlePendulumODE.m
matlab/validation/: export_reference_run.m
notebooks/: rootSimulateLearningWhileWalking.ipynb
scripts/: run_python_simulation.py  validate_matlab_python_parity.py
src/KM_python/: rootSimulateLearningWhileWalking.ipynb  rootSimulateLearningWhileWalking_FIXED.ipynb
src/baseline Learning Model Code/: loadLearnerParameters.m  makeTreadmillSpeed_Split.m  testCode.m
src/locomotor_learning_model/: __init__.py  __main__.py  cli.py  workflow.py
src/new_python_Learning_Model/: DetectEndstance.py  compute_energy_dynamics_model_rls_no_singular.py  compute_model_dynamics_rls_no_singular.py  compute_steady_energy_gradient_v2_no_singular.py  error_from_memory_compute.py  f_objective_asymmetric_nominal.py  f_objective_asymmetric_nominal_8d_to_10d.py  get_treadmill_speed.py  gradient_of_error_from_memory_compute.py  load_biped_model_parameters.py  load_controller_gain_parameters.py  load_initial_body_state.py  load_learnable_parameters_initial.py  load_learner_parameters.py  (+12 more)
tests/: test_detailed_function_comparison.py  test_matlab_python_equivalence.py
(+104 files in other folders)
