[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "locomotor-learning-model"
version = "0.1.0"
description = "Python implementation of the fall risk-aware locomotor learning model."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "scipy>=1.12",
]

[project.scripts]
locomotor-learning-model = "locomotor_learning_model.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
